your commit message

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="color-scheme" content="dark light" />
+        <meta charset="UTF-8" >
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+        <meta name="color-scheme" content="dark light" >
         <title>Сложно сосредоточиться</title>
-        <link rel="icon" href="./images/favicon.ico" sizes="any" />
-        <link rel="icon" href="./images/favicon.svg" />
-        <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
-        <link rel="stylesheet" href="./fonts/fonts.css" />
-        <link rel="stylesheet" href="./styles/globals.css" />
-        <link rel="stylesheet" href="./styles/variables.css" />
-        <link rel="stylesheet" href="./styles/style.css" />
-        <link rel="stylesheet" href="./styles/dark.css" />
-        <link rel="stylesheet" href="./styles/light.css" />
+        <link rel="icon" href="./images/favicon.ico" sizes="any" >
+        <link rel="icon" href="./images/favicon.svg" >
+        <link rel="apple-touch-icon" href="./images/mobile-icon.png" >
+        <link rel="stylesheet" href="./fonts/fonts.css" >
+        <link rel="stylesheet" href="./styles/globals.css" >
+        <link rel="stylesheet" href="./styles/variables.css" >
+        <link rel="stylesheet" href="./styles/style.css" >
+        <link rel="stylesheet" href="./styles/dark.css" >
+        <link rel="stylesheet" href="./styles/light.css" >
     </head>
     <body class="page">
         <header class="header decorated-zone">
@@ -40,7 +40,7 @@
             </nav>
             <h1 class="header__title title">no focus</h1>
             <p class="header__text title-decor">
-                Что делать, когда не можешь делать ничего<br />
+                Что делать, когда не можешь делать ничего<br>
                 Или почему нам так сложно сконцентрироваться, особенно когда очень надо
             </p>
         </header>
@@ -150,13 +150,13 @@
             </section>
             <section class="gallery">
                 <h2 class="title-decor">А можно в картинках?</h2>
-                <ul class="main__image">
-                    <img class="image" src="./images/sunset.png" alt="Закат на фоне гор" loading="lazy" />
-                    <img class="image" src="./images/ice-cream.png" alt="Улыбаяющиеся миска с мороженым, фруктами и взбитыми сливками" loading="lazy" />
-                    <img class="image" src="./images/tape.png" alt="Аудиокассета" loading="lazy" />
-                    <img class="image" src="./images/books.png" alt="Стопка книг с чашкой чая" loading="lazy" />
-                    <img class="image" src="./images/street.png" alt="Японская улица в сиреневом цвете" loading="lazy" />
-                </ul>
+                <div class="main__image">
+                    <img class="image" src="./images/sunset.png" alt="Закат на фоне гор" loading="lazy">
+                    <img class="image" src="./images/ice-cream.png" alt="Улыбаяющиеся миска с мороженым, фруктами и взбитыми сливками" loading="lazy">
+                    <img class="image" src="./images/tape.png" alt="Аудиокассета" loading="lazy">
+                    <img class="image" src="./images/books.png" alt="Стопка книг с чашкой чая" loading="lazy">
+                    <img class="image" src="./images/street.png" alt="Японская улица в сиреневом цвете" loading="lazy">
+                </div>
             </section>
         </main>
         <footer class="footer decorated-zone">
